[package]
name = "qalc"
version = "0.1.0"
authors = ["adam-mcdaniel <adam.mcdaniel17@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "qalc"
path = "src/bin.rs"

[build-dependencies]
lalrpop = "0.17"

[dependencies]
lalrpop = "0.17"
lalrpop-util = "0.17"
regex = "1.3"
clap = "2.3"
comment = "0.1"